@@ -501,6 +501,22 @@ name|plugins
 operator|.
 name|repository
 operator|.
+name|Resource
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|plugins
+operator|.
+name|repository
+operator|.
 name|ResourceDownloader
 import|;
 end_import
@@ -4508,6 +4524,15 @@ return|return
 literal|null
 return|;
 block|}
+name|BackupResourceDownloader
+name|backupDownloader
+init|=
+operator|new
+name|BackupResourceDownloader
+argument_list|(
+name|downloader
+argument_list|)
+decl_stmt|;
 try|try
 block|{
 comment|// now let's see if we can find it in cache and if it is up to date
@@ -4761,7 +4786,7 @@ return|;
 block|}
 block|}
 argument_list|,
-name|downloader
+name|backupDownloader
 argument_list|,
 operator|new
 name|CacheDownloadOptions
@@ -5069,11 +5094,36 @@ operator|+
 name|artFile
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
 name|artFile
 operator|.
 name|delete
 argument_list|()
+condition|)
+block|{
+comment|// Old artifacts couldn't get deleted!
+comment|// Restore the original ivy file so the next time we
+comment|// resolve the old artifacts are deleted again
+name|backupDownloader
+operator|.
+name|restore
+argument_list|()
 expr_stmt|;
+name|Message
+operator|.
+name|error
+argument_list|(
+literal|"Couldn't delete outdated artifact from cache: "
+operator|+
+name|artFile
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
 block|}
 name|removeSavedArtifactOrigin
 argument_list|(
@@ -5247,6 +5297,11 @@ name|unlockMetadataArtifact
 argument_list|(
 name|mrid
 argument_list|)
+expr_stmt|;
+name|backupDownloader
+operator|.
+name|cleanUp
+argument_list|()
 expr_stmt|;
 block|}
 block|}
@@ -5731,6 +5786,186 @@ name|getChangingMatcherName
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+specifier|private
+class|class
+name|BackupResourceDownloader
+implements|implements
+name|ResourceDownloader
+block|{
+specifier|private
+name|ResourceDownloader
+name|delegate
+decl_stmt|;
+specifier|private
+name|File
+name|backup
+decl_stmt|;
+specifier|private
+name|String
+name|originalPath
+decl_stmt|;
+specifier|private
+name|BackupResourceDownloader
+parameter_list|(
+name|ResourceDownloader
+name|delegate
+parameter_list|)
+block|{
+name|this
+operator|.
+name|delegate
+operator|=
+name|delegate
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|download
+parameter_list|(
+name|Artifact
+name|artifact
+parameter_list|,
+name|Resource
+name|resource
+parameter_list|,
+name|File
+name|dest
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// keep a copy of the original file
+if|if
+condition|(
+name|dest
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|originalPath
+operator|=
+name|dest
+operator|.
+name|getAbsolutePath
+argument_list|()
+expr_stmt|;
+name|backup
+operator|=
+operator|new
+name|File
+argument_list|(
+name|dest
+operator|.
+name|getAbsolutePath
+argument_list|()
+operator|+
+literal|".backup"
+argument_list|)
+expr_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+name|dest
+argument_list|,
+name|backup
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+name|delegate
+operator|.
+name|download
+argument_list|(
+name|artifact
+argument_list|,
+name|resource
+argument_list|,
+name|dest
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|restore
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+operator|(
+name|backup
+operator|!=
+literal|null
+operator|)
+operator|&&
+name|backup
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|File
+name|original
+init|=
+operator|new
+name|File
+argument_list|(
+name|originalPath
+argument_list|)
+decl_stmt|;
+name|FileUtil
+operator|.
+name|copy
+argument_list|(
+name|backup
+argument_list|,
+name|original
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|backup
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
+name|cleanUp
+parameter_list|()
+block|{
+if|if
+condition|(
+operator|(
+name|backup
+operator|!=
+literal|null
+operator|)
+operator|&&
+name|backup
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|backup
+operator|.
+name|delete
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
